--- a/homework2/exercise7/exercise7.html
+++ b/homework2/exercise7/exercise7.html
@@ -14,7 +14,9 @@
 </div>
 <div>
     <p> Параграф </p>
-    <p> Параграф </p>
+    <div>
+        <p> Параграф </p>
+     </div>   
     <p> Параграф </p>
 </div>
 
